[package]
edition = "2021"
name = "logger"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
tracing = "0"
tracing-appender = "0"
tracing-core = "0"
tracing-subscriber = {version = "0", features = ["json", "env-filter"]}
