[package]
edition = "2021"
name = "logger"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
tracing = "*"
tracing-appender = "*"
tracing-core = "*"
tracing-subscriber = {version = "*", features = ["json", "env-filter"]}
