[package]
edition = "2021"
name = "redis_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.redis]
features = ["tokio-comp"]
version = "*"

[dependencies.tokio]
features = ["rt-multi-thread","macros","time"]
version = "1"