[package]
edition = "2021"
name = "rocket_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "*"
lazy_static = "*"
# log = "*"
# logger = {git = "https://github.com/yuexclusive/rutils", package = "logger", branch = "dev"}
log = "*"
log4rs = {version = "*", features = ["all_components"]}
openssl = {version = "0", features = ["vendored"]}
redis = {version = "*", features = ["tokio-comp"]}
rocket = {version = "0.5.0-rc.2", features = ["secrets", "json"]}
serde = {version = "*", features = ["derive"]}
serde_json = "*"
sqlx = {version = "0.5", features = [
  "runtime-tokio-native-tls",
  "mysql",
]}
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time"]}
toml = {version = "*"}
uuid = {version = "1", features = ["v4", "fast-rng", "macro-diagnostics"]}
