[package]
name = "sea_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.34" }
tracing-subscriber = { version = "0.3.11" }
async-std = { version = "^1.9", features = ["attributes", "tokio1"] }
sea-orm = { version = "^0", features = [
    "sqlx-all",
    "runtime-async-std-native-tls",
    "debug-print",
] }
serde_json = { version = "^1" }
futures = { version = "^0.3" }
async-stream = { version = "^0.3" }
futures-util = { version = "^0.3" }
