[package]
name = "sql_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "sqlite",
] }
tokio = { version = "1", features = ["full"] }

# futures = "0.3"
# anyhow = "1.0"
# paw = "1.0"
# structopt = { version = "0.3", features = ["paw"] }
