[package]
edition = "2021"
name = "yew_app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
gloo-utils = "0.1"
wasm-bindgen = "0.2"
chrono = "*"
gloo-console = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "Node",
    "HtmlHeadElement",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
]
